--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="jquery.min.js"></script>
   <!-- Latest compiled and minified CSS -->
@@ -24,41 +25,43 @@
 <h1>The Rhyme Generator</h1>
 </header>
 
-<nav class="navbar navbar-inverse">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+  <nav class="navbar navbar-inverse">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-        </div>
-      </form>
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#">Link</a></li>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class=""><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+          <li><a href="index2.html">Recent Words</a></li>
+          <li><a href="#">Battle Page (Beta)</a></li>
+          <li><a href="#">Sound API Voice Transformer Coming Soon!</a></li>
 
-<div class="container-fluid">
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+          </div>
+        </form>
+        <ul class="nav navbar-nav navbar-left">
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+<div class="container-fluid" "col-xs-12 col-sm-6 col-md-8">
   <section id="imago">
     <article>
       <div id="titleText">
         <h3 id="explain">enter your word and select how many rhyming words you want! then click RHYMIFY! </h3>
+        <p id="errorMessage"></p>
       </div>
       <div>
         <form action="#" id="searchContent">
@@ -80,9 +83,8 @@
       <div id='rhymeBox'>
         <ul id='wordBox'>
         </ul>
-        </div>
+      </div>
       <iframe id="soundcloud" width="50%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/126479867&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-      
       <!-- <iframe id="soundcloud" width="50%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/165887633%3Fsecret_token%3Ds-eXvq2&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
     </article>
   </section>
