some bug fixes and localstorage

--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
       <div id="titleText">
         <h3 id="explain">enter your word and select how many rhyming words you want! then click RHYMIFY! </h3>
         <p id="errorMessage"></p>
+
       </div>
       <div>
         <form action="#" id="searchContent">
           <input type="text" id="searchBox" name="word" placeholder="enter word!"/>
-          <select id="num">
+<!--           <p id='screenEM'></p>
+ -->          <select id="num">
             <option value="10">10</option>
             <option value="15">15</option>
             <option value="20">20</option>
