--- a/battle.html
+++ b/battle.html
@@ -9,8 +9,10 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
             <!-- Latest compiled and minified JavaScript -->
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="battle.js"></script>
             <script type="text/javascript" src="script.js"></script>
             <link rel="stylesheet" type="text/css" href="style.css">
+            <link rel="stylesheet" type="text/css" href="battle.css">
             <meta charset="UTF-8">
             <title></title>
         </head>
@@ -34,7 +36,7 @@
                         <li class=""><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                         <li><a href="index2.html">Recent Words</a></li>
                         <li><a href="battle.html">Battle Page (Beta)</a></li>
-                        <li><a href="">Sound API Voice Transformer Coming Soon!</a></li>
+                        <li><a href="#">Sound API Voice Transformer Coming Soon!</a></li>
                     </ul>
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
@@ -50,21 +52,43 @@
                 <section id="imago">
                     <article>
                         <div id="titleText">
+                            <h3 id="explain">RAP BATTLE YOUR FRIENDS AND SEE WHO THE BEST RAPPER IS!</h3>
                             <p id="errorMessage"></p>
                         </div>
-                        <div id="subRecent"/>Recently Searched Words!</div>
+                        <div>
+                            <form action="#" id="searchContent">
+                                <input type="text" id="searchBox" name="word" placeholder="enter word!"/>
+                                <!--           <p id='screenEM'></p>
+                                -->          <select id="num">
+                                    <option value="10">10</option>
+                                    <option value="15">15</option>
+                                    <option value="20">20</option>
+                                    <option value="25">25</option>
+                                    <option value="30">30</option>
+                                    <option value="35">35</option>
+                                    <option value="40">40</option>
+                                    <option value="45">45</option>
+                                    <option value="50">50</option>
+                                </select>
+                            </form>
+                        </div>
+                        <button id="subBut"/>RHYMIFY!</button>
                         <div id='rhymeBox'>
                             <ul id='wordBox'>
                             </ul>
                         </div>
-                        <div id='recentWords'>
-                            <!--    <ul id='recentWordBox'>
-                            </ul> -->
-                        </div>
+                        <form id="frm">Seconds:
+                            <input type="text" id="seconds" name="seconds" value="0" size="2" maxlength="2" />
+                            <br/>
+                            <input type="button" id="btnct" value="Input" />
+                            <span id="timespan"></span>
+                            <input type="button" value="Start" onclick="countdown()">
+                            <input type="button" value="Stop" onclick="cdpause()">
+                            <input type="button" value="Reset" onclick="cdreset()">
+                        </form>
                         <iframe id="soundcloud" width="50%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/126479867&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                     </article>
                 </section>
-            </div>
-        </main>
-    </body>
-</html>
+            </main>
+        </body>
+    </html>
