--- a/index.html
+++ b/index.html
@@ -1,97 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
-<script type="text/javascript" src="jquery.min.js"></script>
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-<script type="text/javascript" src="script.js"></script>
-
-<link rel="stylesheet" type="text/css" href="style.css">
-
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-
-<header id="test">
-<h1>The Rhyme Generator</h1>
-</header>
-
-  <nav class="navbar navbar-inverse">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li class=""><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-          <li><a href="index2.html">Recent Words</a></li>
-          <li><a href="#">Battle Page (Beta)</a></li>
-          <li><a href="#">Sound API Voice Transformer Coming Soon!</a></li>
-
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-          </div>
-        </form>
-        <ul class="nav navbar-nav navbar-left">
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-
-<div class="container-fluid" "col-xs-12 col-sm-6 col-md-8">
-  <section id="imago">
-    <article>
-      <div id="titleText">
-        <h3 id="explain">enter your word and select how many rhyming words you want! then click RHYMIFY! </h3>
-        <p id="errorMessage"></p>
-
-      </div>
-      <div>
-        <form action="#" id="searchContent">
-          <input type="text" id="searchBox" name="word" placeholder="enter word!"/>
-<!--           <p id='screenEM'></p>
- -->          <select id="num">
-            <option value="10">10</option>
-            <option value="15">15</option>
-            <option value="20">20</option>
-            <option value="25">25</option>
-            <option value="30">30</option>
-            <option value="35">35</option>
-            <option value="40">40</option>
-            <option value="45">45</option>
-            <option value="50">50</option>
-          </select>
-        </form>
-      </div>
-      <button id="subBut"/>RHYMIFY!</button>
-      <div id='rhymeBox'>
-        <ul id='wordBox'>
-        </ul>
-      </div>
-      <iframe id="soundcloud" width="50%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/126479867&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-      <!-- <iframe id="soundcloud" width="50%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/165887633%3Fsecret_token%3Ds-eXvq2&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
-    </article>
-  </section>
-</div>
-</main>
-</body>
-
+    <head>
+        <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+            <script type="text/javascript" src="jquery.min.js"></script>
+            <!-- Latest compiled and minified CSS -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+            <!-- Optional theme -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+            <!-- Latest compiled and minified JavaScript -->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="script.js"></script>
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <meta charset="UTF-8">
+            <title></title>
+        </head>
+        <body>
+            <header id="test">
+                <h1>The Rhyme Generator</h1>
+            </header>
+            <nav class="navbar navbar-inverse">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class=""><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a href="index2.html">Recent Words</a></li>
+                        <li><a href="battle.html">Battle Page (Beta)</a></li>
+                        <li><a href="#">Sound API Voice Transformer Coming Soon!</a></li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                        </div>
+                    </form>
+                    <ul class="nav navbar-nav navbar-left">
+                    </li>
+                </ul>
+                </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+            <div class="container-fluid" "col-xs-12 col-sm-6 col-md-8">
+                <section id="imago">
+                    <article>
+                        <div id="titleText">
+                            <h3 id="explain">enter your word and select how many rhyming words you want! then click RHYMIFY! </h3>
+                            <p id="errorMessage"></p>
+                        </div>
+                        <div>
+                            <form action="#" id="searchContent">
+                                <input type="text" id="searchBox" name="word" placeholder="enter word!"/>
+                                <!--           <p id='screenEM'></p>
+                                -->          <select id="num">
+                                    <option value="10">10</option>
+                                    <option value="15">15</option>
+                                    <option value="20">20</option>
+                                    <option value="25">25</option>
+                                    <option value="30">30</option>
+                                    <option value="35">35</option>
+                                    <option value="40">40</option>
+                                    <option value="45">45</option>
+                                    <option value="50">50</option>
+                                </select>
+                            </form>
+                        </div>
+                        <button id="subBut"/>RHYMIFY!</button>
+                        <div id='rhymeBox'>
+                            <ul id='wordBox'>
+                            </ul>
+                        </div>
+                        <iframe id="soundcloud" width="50%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/126479867&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                        <!-- <iframe id="soundcloud" width="50%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/165887633%3Fsecret_token%3Ds-eXvq2&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
+                    </article>
+                </section>
+            </div>
+        </main>
+    </body>
 </html>
