--- a/battle.html
+++ b/battle.html
@@ -58,8 +58,7 @@
                         <div>
                             <form action="#" id="searchContent">
                                 <input type="text" id="searchBox" name="word" placeholder="enter word!"/>
-                                <!--           <p id='screenEM'></p>
-                                -->          <select id="num">
+                                <select id="num">
                                     <option value="10">10</option>
                                     <option value="15">15</option>
                                     <option value="20">20</option>
